# C-WebApp

./: CMakeLists.txt  handlers.c  handlers.h  main.c  routes.c  routes.h  server.c  server.h  tools.c  tools.h
static/: about.html  index.html
